# average_cambridge_assessment

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
src/calculator/: avg_score_calculator.py
src/pathscraper/: __init__.py  scraper.py
src/pdfscraper/: __init__.py  candidates.py  scores.py  scraper.py
